examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/function_return.st
language core;

fn foo(a : Nat) -> Nat {
  return a
}

fn main(n : Nat) -> Bool {
    return foo(0)
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
